--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,18 @@
 .app {
+  position: relative;
   width: 100vw;
   height: 100vh;
   background-color: #d1eaff;
 }
 
+.joystickWrapper {
+  width: 100%;
+  position: absolute;
+  left: 50%;
+  bottom: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  transform: translateX(-50%);
+  z-index: 100;
+}
